--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img {
+            background-color: brown;
+        }
+    </style>
 </head>
 <body>
     welcome to my world
+    <img src="C:\ppr\ppr.jpg" alt="hello">
 </body>
 </html>
