--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         h1{
-            background-color: white;
+            background-color: rgb(7, 252, 60);
             color: red;
             width: 20px;
             height: fit-content;
